<resources>
    <string name="app_name">Bimbingan Skripsi</string>

    <string name="add_task">Buat Topik Bimbingan</string>
    <string name="add_task_subtitle">Pastikan semua informasi yang anda masukan benar</string>
    <string name="task_name">BAB</string>
    <string name="task_description">Keterangan</string>
    <string name="task_file_url">File URL</string>
    <string name="submit_task">Simpan Data</string>
    <string name="lecturer_login_subtitle">Masukan NIK dan Password untuk mengakses akun anda</string>
    <string name="lecturer_login_title">Login Sebagai Dosen</string>
    <string name="sign_in">Login</string>
    <string name="npm">NPM Anda</string>
    <string name="password">Password</string>
    <string name="nik">NIK Anda</string>
    <string name="attachment">Lampiran</string>
    <string name="type_a_message">Ketikan sesuatu</string>
    <string name="back">Back</string>
    <string name="download_attachment">Download</string>
    <string name="welcome_back">Selamat Datang</string>
    <string name="add_thesis">Ajukan Judul Skripsi/TA</string>
    <string name="permasalahan_yang_dibahas">Permasalahan yang dibahas</string>
</resources>
